--- a/package.json
+++ b/package.json
@@ -35,5 +35,11 @@
     "globals": "^15.12.0",
     "nodemon": "^3.1.7",
     "vite": "^6.0.1"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
+  "engines": {
+    "node": ">=20.16.0"
   }
 }
