--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "start": "vite preview"  
   },
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
@@ -34,7 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "nodemon": "^3.1.7",
-    "vite": "^6.0.1"
+    "vite": "^6.0.3"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
