--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "seed": "node prisma/seed.js",
-    "start": "vite preview"  
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "seed": "node prisma/seed.js",
+  "start": "vite preview --port $PORT"
+},
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
     "@prisma/client": "^6.0.1",
