--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "seed": "node prisma/seed.js",
-    "start": "vite preview"  
+    "start": "vite preview --port $PORT"  
   },
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
